less/components/post-excerpt.less
.post-excerpt {
  margin: 0 0 40px;
}

.post-excerpt__actions {
  display: flex;
  flex-direction: row;
  justify-content: left;
  margin: 20px 0 0;
  padding: 0 25px;
  width: 100%;

  @media @tablet {
    padding: 0;
  }
}

